[gd_scene load_steps=3 format=2]

[ext_resource path="res://Driver5Stage.gd" type="Script" id=1]
[ext_resource path="res://Light.tres" type="Theme" id=2]

[node name="Driver5Stage" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 80.0 ]
}
use_forwarding = true

[node name="DriveButton" type="Button" parent="."]
margin_left = 1544.0
margin_top = 528.0
margin_right = 1681.0
margin_bottom = 584.0
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeEdit" type="TextEdit" parent="."]
margin_left = 1520.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 488.0
theme = ExtResource( 2 )
text = "ld x1 x0
ad x2 x1 x1
ad x6 x5 x5
ad x3 x2 x2
ad x7 x6 x6
ad x8 x7 x7
ad x9 x8 x8
ad x10 x9 x9
ad x11 x10 x10
ad x12 x11 x11
ld x5 x12
ad x0 x3 x3"
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowDepsButton" type="Button" parent="."]
margin_left = 1736.0
margin_top = 608.0
margin_right = 1877.0
margin_bottom = 664.0
theme = ExtResource( 2 )
text = "ShowDeps"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickButton" type="Button" parent="."]
margin_left = 1736.0
margin_top = 528.0
margin_right = 1873.0
margin_bottom = 584.0
theme = ExtResource( 2 )
text = "Tick"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpcLabel" type="Label" parent="."]
margin_left = 1544.0
margin_top = 688.0
margin_right = 1664.0
margin_bottom = 725.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="ToggleButton" type="Button" parent="."]
margin_left = 1544.0
margin_top = 608.0
margin_right = 1681.0
margin_bottom = 664.0
theme = ExtResource( 2 )
text = "Toggle"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="DriveButton" to="." method="_on_DriveButton_pressed"]
[connection signal="pressed" from="TickButton" to="." method="tick"]
[connection signal="timeout" from="Timer" to="." method="tick"]
[connection signal="pressed" from="ToggleButton" to="." method="_on_ToggleButton_pressed"]
